# mayalite

./: .gitignore  ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VISION.md  config.yaml.example  main.py  mayalite  pyproject.toml  requirements.txt
src/: __init__.py  bot.py  brave.py  claude.py  compactor.py  config.py  config_wizard.py  digest.py  documents.py  export.py  memory.py  reminders.py  scheduler.py  usage.py  vision.py  voice.py  workspace.py
tests/: __init__.py  test_brave.py  test_config.py  test_documents.py  test_memory.py  test_reminders.py  test_usage.py  test_workspace.py
workspaces/_global/: IDENTITY.md  USER.md
workspaces/base/: HEARTBEAT.md  SOUL.md
workspaces/garage/: SOUL.md  TOOLS.md
workspaces/kitchen/: SOUL.md  TOOLS.md
workspaces/main/: HEARTBEAT.md  SOUL.md
workspaces/marina/: SOUL.md  TOOLS.md
workspaces/pricing-team/: SOUL.md  TOOLS.md
workspaces/workshop/: SOUL.md  TOOLS.md
