[project]
name = "mayalite"
version = "0.4.0"
description = "A minimal, secure AI assistant with workspace-scoped contexts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Prashanth Gangu"}
]
keywords = ["ai", "assistant", "telegram", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-telegram-bot>=21.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "dateparser>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pgangu/mayalite"
Documentation = "https://github.com/pgangu/mayalite#readme"
Repository = "https://github.com/pgangu/mayalite"
Changelog = "https://github.com/pgangu/mayalite/blob/main/CHANGELOG.md"

[project.scripts]
mayalite-bot = "src.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # line length handled separately

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
